CS352/lab4/evalit.output
Grammar

    0 $accept: input $end

    1 input: stmt

    2 stmt: expr

    3 expr: expr PLUS term
    4     | expr MINUS term
    5     | term

    6 term: term MULT factor
    7     | factor

    8 factor: LPAREN expr RPAREN
    9       | NUM


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 9
MINUS (259) 4
PLUS (260) 3
MULT (261) 6
LPAREN (262) 8
RPAREN (263) 8


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
input (10)
    on left: 1, on right: 0
stmt (11)
    on left: 2, on right: 1
expr (12)
    on left: 3 4 5, on right: 2 3 4 8
term (13)
    on left: 6 7, on right: 3 4 5 6
factor (14)
    on left: 8 9, on right: 6 7


State 0

    0 $accept: . input $end

    NUM     shift, and go to state 1
    LPAREN  shift, and go to state 2

    input   go to state 3
    stmt    go to state 4
    expr    go to state 5
    term    go to state 6
    factor  go to state 7


State 1

    9 factor: NUM .

    $default  reduce using rule 9 (factor)


State 2

    8 factor: LPAREN . expr RPAREN

    NUM     shift, and go to state 1
    LPAREN  shift, and go to state 2

    expr    go to state 8
    term    go to state 6
    factor  go to state 7


State 3

    0 $accept: input . $end

    $end  shift, and go to state 9


State 4

    1 input: stmt .

    $default  reduce using rule 1 (input)


State 5

    2 stmt: expr .
    3 expr: expr . PLUS term
    4     | expr . MINUS term

    MINUS  shift, and go to state 10
    PLUS   shift, and go to state 11

    $default  reduce using rule 2 (stmt)


State 6

    5 expr: term .
    6 term: term . MULT factor

    MULT  shift, and go to state 12

    $default  reduce using rule 5 (expr)


State 7

    7 term: factor .

    $default  reduce using rule 7 (term)


State 8

    3 expr: expr . PLUS term
    4     | expr . MINUS term
    8 factor: LPAREN expr . RPAREN

    MINUS   shift, and go to state 10
    PLUS    shift, and go to state 11
    RPAREN  shift, and go to state 13


State 9

    0 $accept: input $end .

    $default  accept


State 10

    4 expr: expr MINUS . term

    NUM     shift, and go to state 1
    LPAREN  shift, and go to state 2

    term    go to state 14
    factor  go to state 7


State 11

    3 expr: expr PLUS . term

    NUM     shift, and go to state 1
    LPAREN  shift, and go to state 2

    term    go to state 15
    factor  go to state 7


State 12

    6 term: term MULT . factor

    NUM     shift, and go to state 1
    LPAREN  shift, and go to state 2

    factor  go to state 16


State 13

    8 factor: LPAREN expr RPAREN .

    $default  reduce using rule 8 (factor)


State 14

    4 expr: expr MINUS term .
    6 term: term . MULT factor

    MULT  shift, and go to state 12

    $default  reduce using rule 4 (expr)


State 15

    3 expr: expr PLUS term .
    6 term: term . MULT factor

    MULT  shift, and go to state 12

    $default  reduce using rule 3 (expr)


State 16

    6 term: term MULT factor .

    $default  reduce using rule 6 (term)
